--- a/charts/multi-service/templates/statefulset.yaml
+++ b/charts/multi-service/templates/statefulset.yaml
@@ -51,16 +51,15 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- if or .Values.env .Values.extraenv .Values.extraEnv }}
           env:
-            {{- with .Values.env }}
-            {{- toYaml . | nindent 12 }}
+              {{- range $key, $value := .Values.env }}
+              - name: {{ quote $key }}
+                value: {{ quote $value }}
+              {{- end }}
+              {{- range $key, $value := .Values.envFrom }}
+                {{- toYaml $value | nindent 16 }}
+                name: {{ quote $key }}
+              {{- end }}
             {{- end }}
-            {{- with .Values.extraenv  }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
-            {{- with .Values.extraEnv  }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
-          {{- end }}
           ports:
             {{- toYaml .Values.ports | nindent 12 }}
           livenessProbe:
