--- a/charts/multi-service/templates/deployment.yaml
+++ b/charts/multi-service/templates/deployment.yaml
@@ -58,14 +58,13 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- if or .Values.env .Values.extraenv .Values.extraEnv }}
           env:
-            {{- with .Values.env }}
-            {{- toYaml . | nindent 12 }}
+            {{- range $key, $value := .Values.env }}
+            - name: {{ quote $key }}
+              value: {{ quote $value }}
             {{- end }}
-            {{- with .Values.extraenv  }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
-            {{- with .Values.extraEnv  }}
-            {{- toYaml . | nindent 12 }}
+            {{- range $key, $value := .Values.envFrom }}
+              {{- toYaml $value | nindent 16 }}
+              name: {{ quote $key }}
             {{- end }}
           {{- end }}
           ports:
