Move to dicts to overwrite each key

--- a/charts/multi-service/templates/statefulset.yaml
+++ b/charts/multi-service/templates/statefulset.yaml
@@ -49,7 +49,7 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if or .Values.env .Values.extraenv .Values.extraEnv }}
+          {{- if or .Values.env }}
           env:
               {{- range $key, $value := .Values.env }}
               - name: {{ quote $key }}
