chore: don't add ha rule if replicas is < 2

--- a/charts/multi-service/templates/prometheus-rule-alerting.yaml
+++ b/charts/multi-service/templates/prometheus-rule-alerting.yaml
@@ -13,6 +13,7 @@ spec:
   groups:
     - name: {{ include "multi-service.fullname" . }}-default-alerting
       rules:
+        {{- if gt (.Values.replicaCount | int) 1 }}
         - alert: HighAvailability-{{ include "multi-service.fullname" . }}
           expr: sum(kube_pod_status_ready{namespace="{{ $.Release.Namespace }}", pod=~"{{ include "multi-service.fullname" . }}-.+"}) < 2
           for: 10m
@@ -21,6 +22,7 @@ spec:
           annotations:
             summary: 'Number of Pods < 2'
             description: 'Service reports having not enough pods to ensure High Availability'
+        {{- end }}
 
         - alert: ZeroPods-{{ include "multi-service.fullname" . }}
           expr: sum(kube_pod_status_ready{namespace="{{ $.Release.Namespace }}", pod=~"{{ include "multi-service.fullname" . }}-.+"}) == 0
