--- a/charts/motive-service/templates/hpa.yaml
+++ b/charts/motive-service/templates/hpa.yaml
@@ -8,8 +8,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "motive-service.labels" . | nindent 4 }}
-    app.kubernetes.io/component: service
+    {{- include "motive-service.serviceLabels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
