--- a/charts/motive-service/templates/service-monitor.yaml
+++ b/charts/motive-service/templates/service-monitor.yaml
@@ -9,8 +9,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   {{- end }}
   labels:
-    {{- include "motive-service.labels" . | nindent 4 }}
-    app.kubernetes.io/component: service
+    {{- include "motive-service.serviceLabels" . | nindent 4 }}
     {{- with .Values.metrics.serviceMonitor.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -50,8 +49,7 @@ spec:
 
   selector:
     matchLabels:
-      {{- include "motive-service.selectorLabels" $ | nindent 6 }}
-      app.kubernetes.io/component: service
+      {{- include "motive-service.serviceSelectorLabels" $ | nindent 6 }}
   {{- if .Values.metrics.serviceMonitor.namespaceSelector }}
   namespaceSelector:
     {{- toYaml .Values.metrics.serviceMonitor.namespaceSelector | nindent 4 }}
