--- a/charts/motive-service/templates/service.yaml
+++ b/charts/motive-service/templates/service.yaml
@@ -3,8 +3,7 @@ kind: Service
 metadata:
   name: {{ include "motive-service.fullname" . }}
   labels:
-    {{- include "motive-service.labels" . | nindent 4 }}
-    app.kubernetes.io/component: service
+    {{- include "motive-service.serviceLabels" . | nindent 4 }}
     {{- with .Values.service.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -26,5 +25,4 @@ spec:
       protocol: {{ .Values.service.ports.metricsProtocol }}
     {{- end }}
   selector:
-    {{- include "motive-service.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: service
+    {{- include "motive-service.serviceSelectorLabels" . | nindent 4 }}
