--- a/charts/motive-service/templates/serviceaccount.yaml
+++ b/charts/motive-service/templates/serviceaccount.yaml
@@ -4,8 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "motive-service.serviceAccountName" . }}
   labels:
-    {{- include "motive-service.labels" . | nindent 4 }}
-    app.kubernetes.io/component: service
+    {{- include "motive-service.serviceLabels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
