--- a/charts/motive-service/templates/networkpolicy.yaml
+++ b/charts/motive-service/templates/networkpolicy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-all
+  name: {{ include "motive-service.fullname" . }}-allow-all
 spec:
   podSelector: {}
   policyTypes:
