--- a/charts/motive-service/templates/serviceaccount.yaml
+++ b/charts/motive-service/templates/serviceaccount.yaml
@@ -1,13 +1,19 @@
 {{- if .Values.serviceAccount.create -}}
+{{- $serviceAccountName := include "motive-service.serviceAccountName" . }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "motive-service.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
   labels:
     {{- include "motive-service.serviceLabels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- if or .Values.serviceAccount.annotations .Values.serviceAccount.iam.enabled }}
   annotations:
+    {{- with .Values.serviceAccount.annotations }}
     {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- if .Values.serviceAccount.iam.enabled }}
+    eks.amazonaws.com/role-arn: arn:aws:iam::{{ .Values.serviceAccount.iam.role.awsAccountID | required ".serviceAccount.iam.role.awsAccountID is required." }}:role/{{ $serviceAccountName }}@{{ .Release.Namespace }}
+    {{- end }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end }}
