fix: review motive-service chart

--- a/charts/motive-service/templates/external-secrets.yaml
+++ b/charts/motive-service/templates/external-secrets.yaml
@@ -1,4 +1,4 @@
-{{- range .Values.externalSecrets.externalSecrets -}}
+{{- range .Values.externalSecrets.externalSecrets }}
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
