--- a/charts/motive-service/templates/secret-stores.yaml
+++ b/charts/motive-service/templates/secret-stores.yaml
@@ -1,4 +1,4 @@
-{{- range .Values.externalSecrets.secretStores -}}
+{{- range .Values.externalSecrets.secretStores }}
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: {{ .kind | default "SecretStore" }}
