--- a/charts/motive-service/templates/secret-stores.yaml
+++ b/charts/motive-service/templates/secret-stores.yaml
@@ -1,3 +1,4 @@
+{{- if (.Capabilities.APIVersions.Has "external-secrets.io/v1beta1") }}
 {{- range .Values.externalSecrets.secretStores }}
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -30,4 +31,5 @@ spec:
             name: {{ include "motive-service.serviceAccountName" $ }}
             namespace: {{ $.Release.Namespace }}
     {{- end }}
+{{- end }}
 {{- end }}
